--- a/gender.html
+++ b/gender.html
@@ -7,7 +7,7 @@
     <h1>Введите пол</h1>
     <form>
         <label for="sex">Пол:</label>
-        <input type="text" id="sex" name="sex" autocomplete="sex"><br><br>
+        <input type="text" id="sex" name="sex" autocomplete="gender"><br><br>
     </form>
 </body>
 </html>
